# labyzhelnov

./: README.md
Макс_ооп_1/: CMakeLists.txt
Макс_ооп_1/OOPZI_task1/task1/exe/: task1.c
Макс_ооп_1/OOPZI_task1/task2/exe/: Task2_e.c
Макс_ооп_1/OOPZI_task1/task3/exe/: CMakeLists.txt  Task3.c
Макс_ооп_1/OOPZI_task1/task4/exe/: task4.c
Макс_ооп_1/OOPZI_task1/task5/exe/: Task5_main.c
Макс_ооп_1/OOPZI_task1/task5/header/: head.h
Макс_ооп_1/OOPZI_task1/task5/lib/: Task5_func.c
Макс_ооп_1/OOPZI_task1/task6/exe/: Task6_main.c
Макс_ооп_1/OOPZI_task1/task6/header/: head.h
Макс_ооп_1/OOPZI_task1/task6/lib/: Task6_func.c
Макс_ооп_1/OOPZI_task1/task7/exe/: Task7_main.c
Макс_ооп_1/OOPZI_task1/task7/header/: head.h
Макс_ооп_1/OOPZI_task1/task7/lib/: Task7_func.c
Макс_ооп_2/: CMakeLists.txt
Макс_ооп_2/OOPZI_task2/exe/: CMakeLists.txt  main1.c
Макс_ооп_2/OOPZI_task2/lib/: CMakeLists.txt  Func_p_1.c
Макс_ооп_3/OOPZI_task3/DO_WHILE/exe/: CMakeLists.txt  MAIN.c
Макс_ооп_3/OOPZI_task3/DO_WHILE/lib/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5.c
Макс_ооп_3/OOPZI_task3/FOR/exe/: CMakeLists.txt
Макс_ооп_3/OOPZI_task3/FOR/lib/: CMakeLists.txt  task1.c  task2.c  task3.c  (+2 more)
Макс_ооп_3/OOPZI_task3/WHILE/exe/: CMakeLists.txt
Макс_ооп_4/exe/: main_f.cpp
Макс_ооп_4/header/: head.h
Макс_ооп_4/lib/: Complex_class.cpp
Макс_ооп_5/exe/: CMakeLists.txt  task_main.cpp
Макс_ооп_5/header/: head.h
Макс_ооп_5/lib/: CMakeLists.txt  int.cpp
Макс_ооп_6/: CMakeLists.txt  README.md
Макс_ооп_6/headers/: Stack.h  Wrap.h
Макс_ооп_6/src/: main.cpp
(+6 files in other folders)
