# CMakeList.txt: проект CMake для OOPZI_task2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#

# Добавьте источник в исполняемый файл этого проекта.
add_executable (exe1 "MAIN.c")
target_link_libraries(exe1 tlib1)
# TODO: Добавьте тесты и целевые объекты, если это необходимо.
